Fixet footer on tablet

--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -40,7 +40,7 @@
     margin-bottom: 42px;
 
     @include onTablet {
-      margin-bottom: 104px;
+      margin-bottom: 48px;
     }
 
     @include onDesktop {
@@ -58,6 +58,14 @@
     text-align: left;
     letter-spacing: -1%;
     color: #7f8096;
+
+    @include onTablet {
+      margin-top: -55px;
+    }
+
+    @include onDesktop {
+      margin-top: 0;
+    }
   }
 
   &__list-title {
@@ -93,6 +101,14 @@
     display: flex;
     gap: 40px;
     margin-bottom: 40px;
+
+    @include onTablet {
+      margin-top: 90px;
+    }
+
+    @include onDesktop {
+      margin-top: 0;
+    }
   }
 
   &__icon {
